# gcam

./: Cargo.toml  README.md
crates/camera_controller/: Cargo.toml
crates/camera_controller/src/: camera_loop.rs  lib.rs  messages.rs  settings.rs
crates/gcam_lib/: Cargo.toml
crates/gcam_lib/src/: error.rs
crates/gcam_lib/src/utils/: geom.rs  image.rs  mod.rs
examples/: toggle.rs
src/: app.rs  error.rs  lib.rs  main.rs
src/cam_thread/: camera_loop.rs  messages.rs  mod.rs  settings.rs
src/camera/: info.rs  mod.rs
src/settings/: config_file.rs  mod.rs  settings.rs
src/settings/defaults/: exclude_cam_settings
src/ui/: main.rs  mod.rs  top_menu.rs
src/ui/components/: bottom_bar.rs  error.rs  mod.rs  top_menu.rs
src/ui/state/: camera.rs  dialogs.rs  mod.rs
src/ui/views/: camera_info.rs  camera_settings.rs  center_view.rs  main.rs  mod.rs  settings.rs
src/ui/views/camera/: central_view.rs  info.rs  media.rs  mod.rs  settings.rs
src/ui/widgets/: toggle.rs
src/ui/windows/: error.rs  settings.rs
