[package]
name = "gcam"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
camera_controller = { path = "crates/camera_controller" }
gphoto2 = "1.3.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
directories = "4.0.1"
