[package]
name = "camera_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gphoto2 = { git = "https://git.maxicarlos.de/maxicarlos08/gphoto2-rs" } # TODO Use the crates version when its published
