[package]
name = "gcam_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
gphoto2 = { git = "https://git.maxicarlos.de/maxicarlos08/gphoto2-rs.git", version = "2" }
image = "0.24.3"
epaint = "0.19.0"
